# bbtreco

./: README.md
Backend/: .env  Cargo.toml
Backend/migrations/: 0001_users_profile.sql  0002_drinks_schema.sql  0003_change_order_key.sql  0004_add_lastupdated_store.sql
Backend/src/: main.rs
Backend/src/db/: db_functions.rs  mod.rs
Backend/src/handlers/: drink_handler.rs  mod.rs  order_history_handler.rs  store_handler.rs  user_handler.rs
Backend/src/models/: drink.rs  mod.rs  order_history.rs  store.rs  user.rs
