[package]
name = "bubble_tea_recommender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "runtime-actix-rustls"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
actix-web = "4"
actix-rt = "2.9.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
